[project]
name = "get-papers"
version = "0.1.0"
description = ""
authors = [
    {name = "tejugithubbit",email = "tejaswinin9741@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "biopython (>=1.85,<2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
get-papers-list = "get_papers.main:main"

